<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.GeoserviceActivity"
    android:orientation="vertical"
    android:background="@color/purple">

    <TextView
        android:id="@+id/geoservice_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/geoservice_text"
        android:background="@color/orange" />

    <EditText
        android:id="@+id/deoservice_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:layout_margin="2dp"
        android:hint="@string/geoservice_destination_hint"
        android:inputType="text"
        android:gravity="top" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/geosevice_start_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pink"
        android:gravity="bottom"
        android:text="@string/geoservice_start_button"
        android:textAlignment="center" />

</LinearLayout>